--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,11 @@ dependencies {
     implementation "com.google.android.material:material:1.6.1"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
 
+    implementation "com.google.android.exoplayer:exoplayer-core:2.14.2"
+    implementation "com.google.android.exoplayer:exoplayer:2.14.2"
+    implementation "com.google.android.exoplayer:exoplayer-hls:2.14.2"
+    implementation "com.google.android.exoplayer:exoplayer-ui:2.14.2"
+    
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
