--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     implementation "com.google.android.material:material:1.6.1"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
 
+    implementation "androidx.media3:media3-exoplayer:1.0.0-beta02"
+    implementation "androidx.media3:media3-ui:1.0.0-beta02"
+    implementation "androidx.media3:media3-exoplayer-dash:1.0.0-beta02"
+
     implementation "com.google.android.exoplayer:exoplayer-core:2.14.2"
     implementation "com.google.android.exoplayer:exoplayer:2.14.2"
     implementation "com.google.android.exoplayer:exoplayer-hls:2.14.2"
