--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        
+
         applicationId "com.frogobox.research"
         minSdk 21
         targetSdk 32
@@ -16,7 +16,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-    
+
     buildFeatures {
         viewBinding true
     }
@@ -27,34 +27,46 @@ android {
             proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
         }
     }
-    
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
-    
+
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_11.toString()
     }
-    
+
 }
 
 dependencies {
 
     implementation "androidx.core:core-ktx:1.8.0"
     implementation "androidx.appcompat:appcompat:1.4.2"
-    implementation "com.google.android.material:material:1.6.1"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
 
-    implementation "androidx.media3:media3-exoplayer:1.0.0-beta02"
+    implementation "androidx.activity:activity-ktx:1.5.1"
+    implementation "androidx.fragment:fragment-ktx:1.5.1"
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.5.1"
+
+    implementation "com.google.android.material:material:1.6.1"
+
     implementation "androidx.media3:media3-ui:1.0.0-beta02"
+    implementation "androidx.media3:media3-exoplayer:1.0.0-beta02"
     implementation "androidx.media3:media3-exoplayer-dash:1.0.0-beta02"
 
-    implementation "com.google.android.exoplayer:exoplayer-core:2.14.2"
     implementation "com.google.android.exoplayer:exoplayer:2.14.2"
+    implementation "com.google.android.exoplayer:exoplayer-core:2.14.2"
+    implementation "com.google.android.exoplayer:exoplayer-dash:2.14.2"
     implementation "com.google.android.exoplayer:exoplayer-hls:2.14.2"
     implementation "com.google.android.exoplayer:exoplayer-ui:2.14.2"
-    
+
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
