--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         </activity>
         <activity
             android:name=".media3.WatchActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:exported="true" />
     </application>
 
