--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation "androidx.media3:media3-ui:1.0.0-beta02"
     implementation "androidx.media3:media3-exoplayer:1.0.0-beta02"
     implementation "androidx.media3:media3-exoplayer-dash:1.0.0-beta02"
+    implementation "androidx.media3:media3-exoplayer-hls:1.0.0-beta02"
 
     implementation "com.google.android.exoplayer:exoplayer:2.14.2"
     implementation "com.google.android.exoplayer:exoplayer-core:2.14.2"
